--- a/board/src/main/resources/application.yaml
+++ b/board/src/main/resources/application.yaml
@@ -11,11 +11,14 @@ spring:
   jpa:
     show-sql: true
     properties:
-      format_sql: true
       dialect: org.hibernate.dialect.MySQL57Dialect
       hibernate.default_batch_fetch_size: 100
+      hibernate:
+        show_sql: true
+        format_sql: true
     hibernate:
       ddl-auto: create
+
   datasource:
     url: jdbc:mysql://192.168.0.100:3306/board?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
     driver-class-name: com.mysql.cj.jdbc.Driver
