--- a/board/src/main/resources/application.yaml
+++ b/board/src/main/resources/application.yaml
@@ -18,6 +18,7 @@ spring:
         format_sql: true
     hibernate:
       ddl-auto: create
+    defer-datasource-initialization: true
 
   datasource:
     url: jdbc:mysql://192.168.0.100:3306/board?useSSL=false&useUnicode=true&allowPublicKeyRetrieval=true
