--- a/board/src/main/resources/application.yaml
+++ b/board/src/main/resources/application.yaml
@@ -26,3 +26,7 @@ spring:
     username: ldy
     password: super1234@
   sql.init.mode: always
+  data:
+    rest:
+      base-path: /api
+      detection-strategy: annotated
