--- a/board/.gitignore
+++ b/board/.gitignore
@@ -1,6 +1,8 @@
-<<<<<<< develop
 # Created by https://www.toptal.com/developers/gitignore/api/macos,java,intellij+all,gradle
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,java,intellij+all,gradle
+
+### Querydsl
+/src/main/generated
 
 ### Intellij+all ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
@@ -177,9 +179,7 @@ gradle-app.setting
 *.hprof
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,java,intellij+all,gradle
-=======
 HELP.md
-.gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
@@ -187,9 +187,7 @@ build/
 
 ### STS ###
 .apt_generated
-.classpath
 .factorypath
-.project
 .settings
 .springBeans
 .sts4-cache
@@ -199,10 +197,8 @@ bin/
 
 ### IntelliJ IDEA ###
 .idea
-*.iws
 *.iml
 *.ipr
-out/
 !**/src/main/**/out/
 !**/src/test/**/out/
 
@@ -215,4 +211,3 @@ out/
 
 ### VS Code ###
 .vscode/
->>>>>>> initialize spring boot project
